--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,9 @@ NEXT_PUBLIC_ENABLE_METRICS="auto"
 NEXT_PUBLIC_FEATURE_SVG_NUMERIC_FILTERS="true"
 NEXT_PUBLIC_DEPTH_THEME="false"
 NEXT_PUBLIC_ORGANIC_DEPTH="false"
-# Preferred flag name; NEXT_PUBLIC_UI_GLITCH_LANDING remains supported for backward compatibility.
+# Preferred flag name (documented in README). NEXT_PUBLIC_UI_GLITCH_LANDING remains supported for backward compatibility.
 NEXT_PUBLIC_FEATURE_GLITCH_LANDING="true"
+# Legacy alias for older deployments. Keep in sync with NEXT_PUBLIC_FEATURE_GLITCH_LANDING until they migrate.
 NEXT_PUBLIC_UI_GLITCH_LANDING="true"
 
 # Safe mode gates experimental AI-assisted tooling on both the server and client.
