--- a/.env.example
+++ b/.env.example
@@ -23,6 +23,10 @@ NEXT_PUBLIC_UI_GLITCH_LANDING="true"
 SAFE_MODE="false"
 NEXT_PUBLIC_SAFE_MODE="false"
 
+# Override AI prompt defaults when integrating providers with different limits.
+AI_MAX_INPUT_LENGTH="16000"
+AI_TOKENS_PER_CHAR="4"
+
 # Browser Sentry configuration. Provide DSN + environment to enable monitoring in production.
 NEXT_PUBLIC_SENTRY_DSN="https://examplePublicKey.ingest.sentry.io/1234567"
 NEXT_PUBLIC_SENTRY_ENVIRONMENT="development"
