--- a/package.json
+++ b/package.json
@@ -50,19 +50,19 @@
     "report:summary": "node scripts/report-summary.mjs"
   },
   "dependencies": {
-    "@sentry/nextjs": "^8.35.0",
     "@radix-ui/react-slot": "^1.2.3",
+    "@sentry/nextjs": "^8.35.0",
     "clsx": "^2.1.1",
     "framer-motion": "12.23.22",
     "fuse.js": "^7.1.0",
     "geist": "^1.5.1",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
-    "zod": "^3.24.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "styled-jsx": "^5.1.1",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@axe-core/playwright": "^4.10.2",
@@ -78,6 +78,7 @@
     "@types/postcss-import": "^14.0.3",
     "@types/react": "^19.1.15",
     "@types/react-dom": "^19.1.9",
+    "@vitest/coverage-istanbul": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
     "autoprefixer": "^10.4.21",
     "cli-progress": "^3.12.0",
