--- a/.github/workflows/workflow-lint.yml
+++ b/.github/workflows/workflow-lint.yml
@@ -36,11 +36,14 @@ jobs:
         with:
           cache-suffix: ${{ vars.NODE_MODULES_CACHE_BUSTER }}
 
-      - name: actionlint
+      - name: actionlint (all workflows)
         uses: reviewdog/action-actionlint@0b71b30a47a15c4d849868cca394fb656f1cf657 # v1.67.0
         with:
           github_token: ${{ github.token }}
           fail_level: error
+          filter_mode: nofilter
+          actionlint_flags: >-
+            $(git ls-files '.github/workflows/*.yml' '.github/workflows/*.yaml')
 
       - name: Install yamllint
         run: sudo apt-get update && sudo apt-get install -y yamllint
